tests/errors/test_err_missing_paren.f90
program paren_test
  integer :: val
  val = (5 * 4 + 2
  print *, val
end program paren_test
